Prevent social link button from wrapping.

--- a/wedding/styles/main.css
+++ b/wedding/styles/main.css
@@ -117,7 +117,7 @@ address {
 .social-button {
 	vertical-align: middle;
 	margin: 0 0.2rem 0 0.2rem;
-  padding: 0 1.2rem 0 1.2rem;
+  padding: 0 1rem 0 1rem;
 }
 
 .social-button:hover {
